src/objects/sked_Outcome__c.object
<CustomObject>
    <fields>
        <fullName>sked_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Outcomes</relationshipLabel>
        <relationshipName>sked_Outcomes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sked_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Outcomes</relationshipLabel>
        <relationshipName>sked_Outcomes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sked_EHR_Care_Plan_Goal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EHR Care Plan Goal</label>
        <referenceTo>HealthCloudGA__EhrCarePlanGoal__c</referenceTo>
        <relationshipLabel>Outcomes</relationshipLabel>
        <relationshipName>sked_Outcomes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sked_Progress_Notes__c</fullName>
        <label>Outcome Progress</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sked_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sked_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ongoing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Making Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Making Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Achieved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ended</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sked_Support_Plan__c</fullName>
        <label>Support Plan</label>
        <referenceTo>sked_Support_Plan__c</referenceTo>
        <relationshipLabel>Outcomes</relationshipLabel>
        <relationshipName>sked_Outcomes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Outcome</label>
    <nameField>
        <label>Outcome Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Outcomes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>